plugins {
    id 'java-library'
}

apply plugin: 'kotlin'
apply plugin: 'com.diffplug.spotless'

dependencies {
    implementation 'androidx.annotation:annotation:1.8.2'
    api 'com.android.tools:sdklib:25.3.0'
    implementation project(path: ':common')
	implementation project(path: ':apksigner')
    implementation 'androidx.test:core:1.4.0'

    // required so internal classes would be included 
    api project(path: ':jaxp')
    api project(path: ':kotlinc')
    
    implementation project(path: ':google-java-format')
    implementation project(path: ':ktfmt')
	implementation project(path: ':eclipse-formatter') 
    
    compileOnly 'com.google.code.gson:gson:2.11.0'
    implementation project(path: ':logging')
    implementation project(path: ':manifmerger')
    implementation project(path: ':project')
    implementation project(path: ':viewbinding-lib')

    // javac
    implementation project(path: ':javac')
    implementation project(path: ':xml-repository')
    // bundletool
    api 'com.android.tools.build:bundletool:1.15.6'
    
    testImplementation 'junit:junit:4.13.2'
    testImplementation "com.google.truth:truth:1.4.4"
    testImplementation "org.robolectric:robolectric:4.13"
    testImplementation project(path: ':jaxp')

    api 'com.android.tools:r8:8.5.35'

    compileOnly project(path: ':android-stubs')
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
    kotlinOptions {
        jvmTarget = '17'
    }
}

spotless {
		java {
			target "**/*.java"
			googleJavaFormat()
			}
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
    ]
}
